test/syc/bad/unsignedsigned.c
/*
 * Both unsigned and signed specifier
 */

unsigned signed a;
